PYIC-8614: make journeyContexts a list instead of a set as DynamoDB does not support an empty set